Done with changes as per TAU env 1. added 2 missing service security scripts 2. fixed notifier install deploy script 3. Added service options similar to space + lrmi config 4. updated readme